--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Digger
 version: '${project.version}'
-main: net.hotamachi.digger.Digger
+main: net.hotamachisubaru.digger.Digger
 api-version: '1.20'
 load: STARTUP
 depend:
