--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,10 @@
 name: Digger
 version: '${project.version}'
 main: net.hotamachisubaru.digger.Digger
-api-version: '1.20'
+api-version: '1.21'
 load: STARTUP
 depend:
   - Vault
+author:
+  Copyright (c) 2023-2024 ほたまちスバル
+
