--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -67,3 +67,8 @@ tools:
   STONE_SHOVEL: 100
   WOODEN_PICKAXE: 50
   WOODEN_SHOVEL: 50
+
+database:
+  type: mysql # または 'sqlite' や 'yaml' <-ここを変更してください。
+
+
