座標表示とダイヤ掘削ランキングの更新機能を追加
- CoordinatesDisplay クラスを新規作成し、プレイヤーの座標表示やダイヤ掘削数ランキングをスコアボードに表示する機能を実装
- SQLiteDatabase.kt 内のプロパティ名を修正 (DiamondMined → diamondMined)
- Digger.java の不要なコードを削除

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
             <version>1.20.6-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.xerial</groupId>
