--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://localhost:3306/database.db
+db.url=jdbc:mysql://localhost:3306/Database.db
 db.user=root
 db.password=your_password
