`/set`コマンドにプレイヤー指定機能を追加、データベース初期化のエラーハンドリング改善、コード構造の整理・リファクタリングを実施

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,7 +12,7 @@ commands:
     permission: digger.reload
   set:
     description: 掘ったダイヤモンド数を強制的にセットします。
-    usage: /set <value>
+    usage: /set <player> <value>
     permission: digger.set
 permissions:
   digger.reload:
