--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,12 @@
 name: Digger
 version: '${project.version}'
 main: net.hotamachisubaru.digger.Digger
-api-version: '1.20'
+api-version: '1.21'
 load: STARTUP
+folia-supported: true
+depend:
+  - Vault
+  - Jecon
 author:
   Copyright (c) 2023-2025 ほたまちスバル
 commands:
